--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 toml = "0.5"
 serde = { version = "1.0", features = ["derive"] }
+clap = { version = "3.1.18", features = ["derive", "cargo"] }
